--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -194,6 +194,8 @@ spec:
       args:
         - |
           set -e -o pipefail
+          ls -la
+          pwd
           echo "cluster name from param is $clusterName"
           cd toolchain-sample
           ls -la
