--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -174,6 +174,7 @@ spec:
           name: steps-volume
     - name: deploy
       image: ibmcom/pipeline-base-image
+      workingDir: /artifacts
       env:
         - name: imageUrl
           value: $(params.imageUrl)      
