--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -86,6 +86,8 @@ spec:
         - |
           set -x -o pipefail;
           # to do - change this 
+          echo ${REPOSITORY}
+          echo ${REPOSITORY} | rev | cut -d '/' -f 1 | rev
           echo ${REPOSITORY##*/}
           cd toolchain-sample
           
@@ -221,7 +223,6 @@ spec:
           DEPLOYMENT_FILE="config/kube/deployment.yaml"
           echo "deployment file $DEPLOYMENT_FILE"
           sed -i 's=$IMAGE='"$BUILT_IMAGE"'=g' $DEPLOYMENT_FILE
-          
           
           echo "cat $DEPLOYMENT_FILE"
           cat $DEPLOYMENT_FILE
