--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -55,7 +55,7 @@ spec:
           #GIT_URL=$(echo "$REPOSITORY" | sed -e "s/:\/\//:\/\/$GIT_AUTH_USER:$GIT_TOKEN@/g")
           echo $GIT_TOKEN
           #to do - change this 
-          GIT_URL=https://$GIT_TOKEN@github.com/jojustin/toolchain-sample.git
+          GIT_URL="https://$GIT_TOKEN@github.com/jojustin/toolchain-sample.git"
           echo "Cloning $GIT_URL"
           repo_exists=$(git ls-remote $GIT_URL 2>&1 | cut -d':' -f2 | head -1 | awk '{print $1,$2,$3}')
           echo "$repo_exists"
