--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -51,6 +51,7 @@ spec:
           #set -e -o pipefail;
           #echo "Cloning $REPOSITORY";
           #git clone -b $BRANCH $REPOSITORY
+          
           # Add the proper creds to the git repository
           #GIT_URL=$(echo "$REPOSITORY" | sed -e "s/:\/\//:\/\/$GIT_AUTH_USER:$GIT_TOKEN@/g")
           echo $GIT_TOKEN
@@ -68,7 +69,7 @@ spec:
           echo $BRANCH
           if [ -z "$BRANCH" ]; then
               echo "git clone"
-              git clone -q -b $BRANCH $GIT_URL
+              git clone -b $BRANCH $GIT_URL
           fi
           ls -la
 
