--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -126,7 +126,11 @@ spec:
           cat feature.json     
           echo "---------------"               
           echo "Retrieved the Flags. Written to the json" 
-          
+          git status
+          echo "----git sbranch "
+          git branch 
+          echo "----git status "          
+          git status --porcelain=v1 2>/dev/null | wc -l
       volumeMounts:
         - mountPath: /artifacts
           name: task-volume
