--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -131,6 +131,18 @@ spec:
           git branch 
           echo "----git status "          
           git status --porcelain=v1 2>/dev/null | wc -l
+          changes=$(git status --porcelain=v1 2>/dev/null | wc -l)
+          echo "------+++++++++++++++++++++++++++++=========="                       
+          if [ "$changes" = "0" ]; then
+            echo "no changes"
+          else 
+             echo "changes ---- "
+             git add .
+             echo "after add "             
+             git commit -m "sync with app configuration"
+             echo "after commit " 
+             exit 1
+          fi
       volumeMounts:
         - mountPath: /artifacts
           name: task-volume
