--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -140,12 +140,13 @@ spec:
              git add .
              echo "after add "
              git config user.name "jojustin"
+             git config user.email "jojustin@in.ibm.com"             
              git config -l             
              git commit -m "sync with app configuration"
              echo "after commit " 
              #git push --set-upstream origin acsync
-             #echo "after push origin " 
-             #curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":"acsync"}'
+             echo "after push origin " 
+             curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":"acsync"}'
              exit 1
           fi
       volumeMounts:
