--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -145,7 +145,7 @@ spec:
              git commit -m "sync with app configuration"
              echo "after commit " 
              #git push --set-upstream origin acsync
-             git push origin acsync
+             git push origin
              echo "after push origin " 
              curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":"acsync"}'
              exit 1
