--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -144,8 +144,9 @@ spec:
              git config -l             
              git commit -m "sync with app configuration"
              echo "after commit " 
+             git config remote.origin.push HEAD
              #git push --set-upstream origin acsync
-             git push origin
+             git push -u origin acsync
              echo "after push origin " 
              curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":"acsync"}'
              exit 1
