--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -151,7 +151,7 @@ spec:
              echo "after commit " 
              #git config remote.origin.push HEAD
              #git push --set-upstream origin $localBranchName
-             git push origin
+             git push origin $localBranchName
              echo "after push origin " 
              curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":"acsync"}'
              exit 1
