--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -150,10 +150,9 @@ spec:
              git commit -m "sync with app configuration"
              echo "after commit " 
              #git config remote.origin.push HEAD
-             #git push --set-upstream origin $localBranchName
-             git push origin $localBranchName
+             git push --set-upstream origin $localBranchName
              echo "after push origin " 
-             curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":"acsync"}'
+             curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":"$localBranchName"}'
              exit 1
           fi
       volumeMounts:
